--- a/C programs/别踩白块/别踩白块/别踩白块.vcxproj
+++ b/C programs/别踩白块/别踩白块/别踩白块.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a93407bb-1c6a-464e-a4b1-92687688e163}</ProjectGuid>
+    <ProjectGuid>{1955ff88-2abd-41c3-b408-13526ebadca3}</ProjectGuid>
     <RootNamespace>别踩白块</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="别踩白块.cpp" />
+    <ClCompile Include="源.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
