--- a/C programs/别踩白块/别踩白块/别踩白块.vcxproj.filters
+++ b/C programs/别踩白块/别踩白块/别踩白块.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="别踩白块.cpp">
+    <ClCompile Include="源.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
